# syncfolders

./: .anjuta_sym_db.db  Makefile  Makefile.am  Makefile.am.bak  Makefile.in  ProjectHome.md  README  comparefolders.c  comparefolders.h  comparefolders.h~  configure  configure.ac  consoleprint.c  consoleprint.h  copyfile.c  copyfile.h  copyfile.h~  copyfolder.c  copyfolder.h  eclipse_gtk.md  gtk_gui.c  gtk_gui.h  issues.c  issues.h  main.c  main.c~  readfolder.c  readfolder.c~  readfolder.h  readfolder.h~  readfolders.dia~  screenshots.md  syncfolders.dia  syncfolders_introduction.md  usage_commandline_tool.md
.anjuta/: default.profile
.anjuta/session/: anjuta.session  dock-layout.xml
Debug/: Makefile  config.h  config.status  syncfolders
Debug/.deps/: comparefolders.Po  copyfile.Po  main.Po  readfolder.Po
autom4te.cache/: output.0  requests  traces.0  traces.1
