## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = syncfolders

syncfolders_SOURCES = \
	main.c       \
	readfolder.c       \
	readfolder.h       \
	comparefolders.c       \
	comparefolders.h       \
	copyfile.c       \
	copyfile.h

syncfolders_LDFLAGS = 

syncfolders_LDADD = 

